# MAI_GW

./: .gitignore  README.md  converter.py  neo4j.sh  rules.cql  script.sh  workspace.dsl  workspace.json
.github/workflows/: cmake-multi-platform.yml  test-dsl.yml
converter/: converter.py  workspace.json
examples/: workspace.json
examples/Articulation/: articulation.arch  input.arch  result.txt
examples/DMZ/: input.arch  result.txt  workspace.dsl
examples/Hold/: hold.arch  result.txt  workspace.dsl
examples/IntegrationPlatform/: input.arch  result.txt  workspace.dsl
extension/: .vscodeignore  package-lock.json  package.json  tsconfig.json  webpack.config.js
extension/.devcontainer/: devcontainer.json
extension/client/: package-lock.json  package.json  tsconfig.json
extension/client/src/: extension.ts
extension/client/syntaxes/: arch.tmLanguage.json
extension/server/: package.json  tsconfig.json
extension/server/src/: analysis.ts  server.ts
language/: .clang-format  .clang-tidy  .clang-uml  .clangd  CMakeLists.txt  CMakePresets.json
language/.devcontainer/: Dockerfile  devcontainer.json
language/doc/: language.md  prototype.md
language/include/ast/: ast.hpp  expression.hpp  statement.hpp
language/include/json/: converter.hpp  serializer.hpp
language/include/lang/: ast.hpp  expression.hpp  parser.hpp
language/include/parser/: expressions.hpp  identifiers.hpp  literals.hpp  parser.hpp  statements.hpp
language/include/translator/: constant.hpp  context.hpp  format.hpp  helpers.hpp  translator.hpp
language/src/: json.cpp  main.cpp
language/test/: CMakeLists.txt  json_test_smoke.cpp  parser_test_smoke.cpp  translator_test_smoke.cpp
scripts/: neo4j.sh  structurizr.sh  test-runner.sh
translator/: CMakeLists.txt
translator/.devcontainer/: Dockerfile
translator/include/lang/: ast.hpp  expression.hpp  parser.hpp
translator/include/translator/: translator.hpp
translator/src/: main.cpp
translator/test/: CMakeLists.txt  parser_test_smoke.cpp  translator_test_smoke.cpp
